collectors and ExecutorServiceExample

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,24 @@
 server.port=8081
+#logging.level.root=debug
 
-logging.level.root=debug
+spring.jpa.show-sql=false
+server.servlet.context-path=/
+# create and drop tables and sequences, loads import.sql
+spring.jpa.hibernate.ddl-auto=update
+
+#spring.datasource.url= jdbc:mysql://localhost:3306/kafka_web_socket?createDatabaseIfNotExist=true&autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect.storage_engine=innodb
+
+spring.datasource.url=jdbc:h2:mem:data_structure_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:file:/data/demo
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
