--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,40 @@
 server.port=8081
-#logging.level.root=debug
 
-spring.jpa.show-sql=false
 server.servlet.context-path=/
 # create and drop tables and sequences, loads import.sql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
+
+
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:orcl
+spring.datasource.username=
+spring.datasource.password=
+
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+spring.datasource.hikari.pool-name=MyHikariCP
+
+
+# Configure HikariCP settings
+#spring.datasource.hikari.pool-name=MyHikariCP
+#spring.datasource.hikari.leak-detection-threshold=50000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.connection-timeout=50000
+
+spring.jpa.properties.hibernate.jdbc.batch_size=25
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+#spring.jpa.properties.hibernate.generate_statistics=true
+hibernate.jdbc.batch_versioned_data =true
+
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
+#management.metrics.enable.hikari=true
+management.endpoints.web.exposure.include=*
+
+logging.level.org.hibernate.SQL=ERROR
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate=DEBUG
 
 #spring.datasource.url= jdbc:mysql://localhost:3306/kafka_web_socket?createDatabaseIfNotExist=true&autoReconnect=true&allowPublicKeyRetrieval=true&useSSL=false
 #spring.datasource.username=root
@@ -12,13 +42,13 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.properties.hibernate.dialect.storage_engine=innodb
 
-spring.datasource.url=jdbc:h2:mem:data_structure_db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:data_structure_db
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=password
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.datasource.url=jdbc:h2:file:/data/demo
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.h2.console.settings.trace=false
+#spring.h2.console.settings.web-allow-others=false
